--- a/react-router/demo/package.json
+++ b/react-router/demo/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"start": "webpack-dev-server --inline --content-base  --history-api-fallback"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:dev": "webpack-dev-server --inline --content-base  --history-api-fallback",
+    "start:prod": "webpack && node server.js"
   },
   "author": "byronlun",
   "license": "ISC",
@@ -18,6 +20,9 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
+    "compression": "^1.6.2",
+    "express": "^4.14.0",
+    "if-env": "^1.0.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-router": "^2.8.0"
