--- a/vue/infoSecurityApp/package.json
+++ b/vue/infoSecurityApp/package.json
@@ -15,6 +15,7 @@
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.18.0",
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
