--- a/vue/infoSecurityApp/package.json
+++ b/vue/infoSecurityApp/package.json
@@ -19,6 +19,7 @@
     "babel-runtime": "^6.18.0",
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
+    "mathjs": "^3.6.0",
     "style-loader": "^0.13.1",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^9.7.0",
