--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,6 +13,12 @@
     "cheerio": "^0.22.0",
     "crawler": "^1.0.2",
     "eventproxy": "^0.3.5",
+    "node-fetch": "^1.6.3",
     "superagent": "^3.3.2"
+  },
+  "dependencies": {
+    "babel-core": "^6.22.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0"
   }
 }
