--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "babel-core": "^6.22.1",
+    "babel-polyfill": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0"
   }
