--- a/other/前端导出Excel/nodejs引入/package.json
+++ b/other/前端导出Excel/nodejs引入/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "byronlun",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "xlsx": "^0.9.9"
+  }
 }
